# agent-deployment-console

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  fly.toml
.github/workflows/: ci.yml  deploy.yml
apps/agent/: pyproject.toml
apps/agent/src/agent_service/: api.py  db.py  graph.py  guards.py  llm.py  main.py  registry.py  retrieval.py  seed.py  tools.py  tracing.py
apps/agent/src/agent_service/evals/: __main__.py  cases.yaml  judge.py  runner.py
apps/agent/tests/: conftest.py  test_api.py  test_evals.py  test_graph.py  test_healthz.py  test_registry.py  test_retrieval.py  test_seed.py
apps/console/: index.html  package-lock.json  package.json  vite.config.ts
apps/console/src/: App.tsx  api.ts  styles.css
apps/console/src/pages/: Chat.tsx  Evals.tsx  Inbox.tsx  Traces.tsx  Versions.tsx
data/: customers.json  known_issues.json
data/kb/: device-compatibility.md  escalation-policy.md  known-issues-registry.md  login-and-accounts.md  network-connectivity.md  product-overview.md  regional-compliance-eu.md  video-playback-troubleshooting.md
